syntax = "proto3";

package account;

import "account_commons.proto";

option java_multiple_files = true;
option java_package = "com.hts.generated.grpc";
option java_outer_classname = "AccountAdminProto";

message CreateAccountRequest {
  int64 account_id = 1;
  string password = 2;
}

message DeleteAccountRequest {
  int64 account_id = 1;
}

message DepositRequest {
  int64 account_id = 1;
  int64 amount_micro_units = 2;
  string currency = 3;
  string source = 4;
}

message WithdrawRequest {
  int64 account_id = 1;
  int64 amount_micro_units = 2;
  string currency = 3;
  string destination = 4;
}

service AccountAdminService {
  rpc CreateAccount(CreateAccountRequest) returns (CommonReply);
  rpc DeleteAccount(DeleteAccountRequest) returns (CommonReply);
  rpc Deposit(DepositRequest) returns (CommonReply);
  rpc Withdraw(WithdrawRequest) returns (CommonReply);
}
